# parse-pdf-for-llm

./: .gitignore  LICENSE  README.md  parse_pdf.py  pyproject.toml
.claude/skills/parse-pdf/: SKILL.md  parse_pdf.py
.github/workflows/: release.yml
gui/: __init__.py  __main__.py  app.py  editor.py  ollama_models.py  runner.py  settings.py
packaging/: README.md  parse_pdf_gui.spec
tools/: README.md  table-image-to-md.html
