[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "parse-pdf-for-llm"
version = "0.1.0"
description = "Parse a PDF (text + tables + figures) into an agent-friendly folder structure that LLMs can route through cheaply."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [{ name = "Shay Mark", email = "shaymark@gmail.com" }]
keywords = ["pdf", "llm", "claude", "agent", "datasheet", "rag", "extraction"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Text Processing :: Markup",
    "Topic :: Scientific/Engineering :: Information Analysis",
]
dependencies = [
    "pymupdf>=1.24",
    "pymupdf4llm>=0.0.17",
]

[project.optional-dependencies]
# Vision-LLM features (--vision-tables, --describe-figures) need a local Ollama
# install plus a vision model (default: qwen2.5vl:7b — `ollama pull qwen2.5vl:7b`).
vision = ["ollama>=0.3"]
# Desktop GUI wrapper (`parse-pdf-gui`). tkinter itself is stdlib; tkinterdnd2
# adds OS-native drag-and-drop, platformdirs gives us a cross-platform config dir.
gui = [
    "tkinterdnd2>=0.4",
    "platformdirs>=4",
    # macOS-only: needed so the Tk window comes to the foreground when
    # launched from a .app bundle (NSApp activation).
    "pyobjc-framework-Cocoa>=10; sys_platform == 'darwin'",
]

[project.urls]
Homepage = "https://github.com/shaymark/parse-pdf-for-llm"
Issues = "https://github.com/shaymark/parse-pdf-for-llm/issues"

[project.scripts]
parse-pdf = "parse_pdf:main"
parse-pdf-gui = "gui.app:main"

[tool.setuptools]
# The CLI script lives inside the Claude Code Skill folder so the skill is a
# self-contained drop-in (`cp -r .claude/skills/parse-pdf ~/.claude/skills/`).
# The `gui` package lives at the repo root. We map both into the install.
package-dir = { "" = ".claude/skills/parse-pdf", "gui" = "gui" }
py-modules = ["parse_pdf"]
packages = ["gui"]
